--- a/public/sass/pages/_laser.scss
+++ b/public/sass/pages/_laser.scss
@@ -193,6 +193,7 @@
     .object-position {
         font-size: 20px;
         width: 230px;
+        z-index: 1;
 
         .caption,
         .controls {
